5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1684_1879.log
== TEST (2019-04-29 16:46:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

H = x - (1/4) * y

if(x > 400) and ((y > 0) and (y < 400):
	print(x - (1/4) * y)

	

-- ERROR:
File "XXXX", line 7
    if(x > 400) and ((y > 0) and (y < 400):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:47:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

H = x - (1/4) * y

if(x > 400) and ((y > 0) and (y < 400)):
	print(x - (1/4) * y)

	

-- OUTPUT:
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:49:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")
H = x - (1/4) * y

if(x > 400) and ((y > 0) and (y < 400)):
	print(x - (1/4) * y)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:49:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")
H = x - (1/4) * y

if(x > 400) and ((y > 0) and (y < 400)):
	H = (x - (1/4) * y)
	print(H)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:50:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")
H = x - (1/4) * y

if(x > 400) and ((y > 0) and (y < 400)):
	H = (x - (1/4) * y)
	print(H)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:54:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400) == 500:
	
	
	H = (x - (1/4) * y)
	print(H)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:54:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400) == 500:
	H = (x - (1/4) * y)
	print(H)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:56:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	print(H)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:57:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	x = 500
	print(x)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:58:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	g = 500
print(x)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
420.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:59:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	g = 500
print(g)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:59:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	g = 500
	print(g)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:33:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(H > 400):
	H = (x - (1/4) * y)
	g = 500
	print(g)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(H > 400):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:34:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(H > 400):
	H = (x - (1/4) * y)
	g = 500
	print(g)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(H > 400):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:37:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 400):
	g = 500
	print(g)

	

-- OUTPUT:
420.0 extras e 20.0 de falta
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:40:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 0) and (H > 400):
	g = 500
	print(H = g)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(H = g)
TypeError: 'H' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 0) and (H > 400):
	g = 500
print(H = g)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(H = g)
TypeError: 'H' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)

if(H > 0) and (H > 400):
	g = 500
	print(H + g)
	

-- OUTPUT:
420.0 extras e 20.0 de falta
915.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")

H = (x - (1/4) * y)
gf = 500
gp = 100

if(H > 400):
	print(h + g)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(h + g)
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:46:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400) or ((y > 0) and (y <= 400)):
	print((x - (1/4) * y))
	

-- EXECUTION TIME:
0.192331
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0 extras e 20.0 de falta
415.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5 extras e 100.0 de falta
375.5
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0 extras e 44.0 de falta
289.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:46:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400) or ((y > 0) and (y <= 400)):
	print((x - (1/4) * y))
	

-- OUTPUT:
420.0 extras e 20.0 de falta
415.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400):
	g = 500
	print("$",g)
	

-- OUTPUT:
420.0 extras e 20.0 de falta
$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:49:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400):
	g = 500
	print("$",round(g,2))
	

-- OUTPUT:
420.0 extras e 20.0 de falta
$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:50:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("numero de horas extras: "))
y = float(input("numero de horas que o funcionario faltou: "))

print(x,"extras e",y,"de falta")


if(x > 400):
	g = 500
	print("R$",round(g,2))
	

-- OUTPUT:
420.0 extras e 20.0 de falta
R$ 500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
